# SPFERE

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/on_device/client/: client_cleanup.sh  client_setup.sh  client_test.sh  disable-wlan0-power-save.sh
scripts/on_device/server/: batch_run_all_clients.sh  server_cleanup.sh  server_setup.sh  server_test.sh
scripts/simulation/: sim_cleanup.sh  sim_setup.sh  sim_test.sh
src/chen2026spfere/client/: client.py  client_bat.py  client_config.py  client_info.py  client_load_data.py  client_train_test.py
src/chen2026spfere/lstm/: lstm_Ras_Pi_4.pt  lstm_Ras_Pi_5.pt
src/chen2026spfere/server/: server.py  server_aggregation.py  server_config.py  server_load_data.py  server_lstm.py  server_model_gen.py
src/chen2026spfere/simulation/: sim.py  sim_aggregation.py  sim_config.py  sim_device_data_gen.py  sim_eval.py  sim_feddrop.py  sim_load_data.py  sim_sd_op.py  sim_sync.py  sim_timeline.py  sim_train.py
src/chen2026spfere/utils/: bat_loop.py  client_logger.py  defined_models.py  low_dtype_casting.py  model_map.py  performance_test.py  protocol_sock.py  resnet.py  server_logger.py  set_seed.py
